<resources>
    <string name="app_name">Archive Saver</string>
    <string name="subtitle">공유한 페이지를 조용히 캡처하고 아카이브합니다.</string>
    <string name="open_page">페이지 열기</string>
    <string name="save_page">저장하기</string>
    <string name="settings_title">설정</string>
    <string name="idle_status">공유로 URL을 받거나 직접 입력하세요.</string>
    <string name="save_setup_label">저장할 페이지</string>
    <string name="url_label">저장할 링크</string>
    <string name="collection_label">컬렉션</string>
    <string name="collection_default">축구</string>
    <string name="status_label">진행 상태</string>
    <string name="active_jobs_label">저장 작업</string>
    <string name="clear_finished_jobs">완료 정리</string>
    <string name="empty_jobs">아직 진행 중인 저장 작업이 없습니다.</string>
    <string name="no_active_jobs">대기 중</string>
    <string name="jobs_tab">작업</string>
    <string name="preview_tab">미리보기</string>
    <string name="preview_label">미리보기</string>
    <string name="history_section_title">저장 기록</string>
    <string name="view_all">모두 보기</string>
    <string name="history_section_subtitle">최근 저장한 페이지</string>
    <string name="history_empty">아직 저장 기록이 없습니다.</string>
    <string name="storage_section_title">저장소 관리</string>
    <string name="temp_cache_label">임시 캐시</string>
    <string name="temp_cache_subtitle">사용 중인 임시 파일</string>
    <string name="clear_temp_cache">임시 파일 정리</string>
    <string name="app_info_section_title">앱 정보</string>
    <string name="version_label">버전</string>
    <string name="server_label">서버</string>
    <string name="server_address_label">서버 주소</string>
    <string name="open_archive">아카이브 열기</string>
    <string name="cache_cleaned">임시 파일을 정리했습니다.</string>
    <string name="step_capture">캡처</string>
    <string name="step_upload">업로드</string>
    <string name="step_archive">저장</string>
    <string name="collapse">접기</string>
    <string name="raindrop_import_section_title">Raindrop 북마크 가져오기</string>
    <string name="raindrop_import_description">Raindrop에 저장된 북마크를 가져와 기기에 오프라인으로 저장합니다.</string>
    <string name="raindrop_import_button">Raindrop에서 북마크 가져오기</string>
    <string name="importing">가져오는 중...</string>
    <string name="import_completed">Raindrop 북마크 가져오기 및 오프라인 저장이 완료되었습니다.</string>
    <string-array name="collection_options">
        <item>축구</item>
        <item>야구</item>
        <item>잡</item>
        <item>미분류</item>
    </string-array>
</resources>
